# workspace

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CURSOR.md  PERPLEXITY.md  README.md  _CHEATSHEET.md  _CONTEXT.md  _FRAMEWORKS.md  _HOME.md  _MOC.md  _PROJECTS.md  _SKILLS.md  llms.txt
.claude/: settings.json
.github/: CONVENTIONS.md  PULL_REQUEST_TEMPLATE.md
.obsidian/: app.json  appearance.json  community-plugins.json  daily-notes.json  graph.json  hotkeys.json  plugins-manifest.json
00-bootstrap/: BOOTSTRAP.md  OBSIDIAN-SETUP.md  SURFACES.md  beacon-enroll.sh  bootstrap.sh  workspace-manifest.json  workspace-manifest.v2.json
00-frameworks/: 00-README.md  02-ui-ux-operational-framework.md  04-research-and-evidence-framework.md  05-last-mile-craft-framework.md  06-qa-operating-model.md  07-integration-and-review-framework.md  08-workspace-contribution-framework.md  _migration-audit-notes_2026-04-21.md  _session-state-template.md  team-practices-and-decisions.md
01-frameworks/: 00-README.md  01-aesthetic-lens.md  02-ui-ux-operational-framework.md  03-collaboration-and-critique-framework.md  (+9 more)
07-projects/18-bootstrap-generator/generator/: profile.example.yaml  pyproject.toml
07-projects/18-bootstrap-generator/generator/schemas/: manifest.schema.json  profile.schema.json
07-projects/18-bootstrap-generator/generator/templates/: README.md
07-projects/18-bootstrap-generator/generator/wsxlib/: __init__.py  adapters.py  archive.py  cli.py  health.py  lifecycle.py  mcp_template.py  moc.py  projects.py  resolver.py  scaffold.py  scan.py  skills.py  upgrade.py
(+752 files in other folders)
